--- a/common/src/main/resources/assets/chat_heads/lang/ja_jp.json
+++ b/common/src/main/resources/assets/chat_heads/lang/ja_jp.json
@@ -1,25 +1,27 @@
 {
-	"modmenu.descriptionTranslation.chat_heads": "チャット相手を見て確認しましょう！\nチャットメッセージの横にプレイヤーの頭のアイコンを追加します．",
+	"modmenu.descriptionTranslation.chat_heads": "チャット相手を見て確認しましょう！\nチャットメッセージの横にプレイヤーの頭のアイコンを追加します。",
 	"text.autoconfig.chat_heads.title": "Chat Heads",
 	"text.autoconfig.chat_heads.option.offsetNonPlayerText": "プレイヤーのチャット以外のテキストを字下げ",
 	"text.autoconfig.chat_heads.option.offsetNonPlayerText.@Tooltip": "有効にするとすべてのテキストの開始位置を揃えます",
-	"text.autoconfig.chat_heads.option.explanation": "\"UUID\"? \"ヒューリスティック\"?",
-	"text.autoconfig.chat_heads.option.explanation.@Tooltip": "通常，サーバーはメッセージの送信者が誰なのか，\nつまり送信者のUUIDを伝えてくれます．\nしかし，そうでないサーバーもあり，偽のUUIDを伝えてくることもあります．\nその場合，ヒューリスティックを用いてメッセージ内容から推測する必要があります．\nこのヒューリスティックは完璧ではないため，アイコンが一致しないことがあります．",
+	"text.autoconfig.chat_heads.option.explanation": "「UUID」?「ヒューリスティック」?",
+	"text.autoconfig.chat_heads.option.explanation.@Tooltip": "通常、サーバーはメッセージの送信者が誰なのか、\nつまり送信者のUUIDを伝えてくれます。\nしかし、そうでないサーバーもあり、偽のUUIDを伝えてくることもあります。\nその場合、ヒューリスティックを用いてメッセージ内容から推測する必要があります。\nこのヒューリスティックは完璧ではないため、アイコンが一致しないことがあります。",
 	"text.autoconfig.chat_heads.option.renderPosition": "描画位置",
-	"text.autoconfig.chat_heads.option.renderPosition.@Tooltip": "チャットの頭をどこに描画するか\n\n注意: \"名前の前\"は特定のmodと競合する可能性があります。\nCaxtonとModern UIでは、自動的に\"行の前\"が使用されます。",
+	"text.autoconfig.chat_heads.option.renderPosition.@Tooltip": "チャットの頭をどこに描画するか\n\n注意：「名前の前」は特定のmodと競合する可能性があります。\nCaxtonとModern UIでは、自動的に「行の前」が使用されます。",
 	"text.autoconfig.chat_heads.option.renderPosition.BEFORE_LINE": "行の前",
 	"text.autoconfig.chat_heads.option.renderPosition.BEFORE_NAME": "名前の前",
 	"text.autoconfig.chat_heads.option.senderDetection": "送信者の識別",
-	"text.autoconfig.chat_heads.option.senderDetection.@Tooltip": "ほとんどのサーバーでは\"両方\"でうまく機能します．\nサーバーが偽のUUIDを伝える場合には\n\"ヒューリスティックのみ\"を使用する必要があります．",
+	"text.autoconfig.chat_heads.option.senderDetection.@Tooltip": "ほとんどのサーバーでは「両方」でうまく機能します。\nサーバーが偽のUUIDを伝える場合には\n「ヒューリスティックのみ」を使用する必要があります。",
 	"text.autoconfig.chat_heads.option.senderDetection.UUID_ONLY": "UUIDのみ",
 	"text.autoconfig.chat_heads.option.senderDetection.UUID_AND_HEURISTIC": "両方",
 	"text.autoconfig.chat_heads.option.senderDetection.HEURISTIC_ONLY": "ヒューリスティックのみ",
 	"text.autoconfig.chat_heads.option.smartHeuristics": "スマートヒューリスティック",
 	"text.autoconfig.chat_heads.option.handleSystemMessages": "システムメッセージの処理",
-	"text.autoconfig.chat_heads.option.handleSystemMessages.@Tooltip": "頭を\"純粋な\"サーバーメッセージに追加するかどうかです．\n多くのサーバー(例えばFreedomChatプラグインを導入している場合)は\nプレイヤーメッセージをサーバーメッセージに変えてしまうことに注意してください！\nこのオプションを無効化するには何を行っているかを理解した場合のみにしてください！",
-	"text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip": "サーバーがUUIDを伝えることが既知の場合，\nヒューリスティックを無効にします．\n(送信者の識別が\"両方\"のときに適用されます．)",
+	"text.autoconfig.chat_heads.option.handleSystemMessages.@Tooltip": "頭を「純粋な」サーバーメッセージに追加するかどうかです。\n多くのサーバー（例えばFreedomChatプラグインを導入している場合）は\nプレイヤーメッセージをサーバーメッセージに変えてしまうことに注意してください！\nこのオプションを無効化するには何を行っているかを理解した場合のみにしてください！",
+	"text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip": "サーバーがUUIDを伝えることが既知の場合、\nヒューリスティックを無効にします。\n（送信者の識別が「両方」のときに適用されます。）",
 	"text.autoconfig.chat_heads.option.nameAliases": "ニックネーム",
-	"text.autoconfig.chat_heads.option.nameAliases.@Tooltip": "自動的に一致させられないニックネームを設定できるサーバーもあります．\n以下のように，手動でニックネームをプロフィール名に対応させられます:\nニックネーム -> プロフィール名",
+	"text.autoconfig.chat_heads.option.nameAliases.@Tooltip": "自動的に一致させられないニックネームを設定できるサーバーもあります。\n以下のように、手動でニックネームをプロフィール名に対応させられます:\nニックネーム -> プロフィール名",
+	"text.autoconfig.chat_heads.option.detectNameAliases": "エイリアスを自動検出する",
+	"text.autoconfig.chat_heads.option.detectNameAliases.@Tooltip": "このオプションは、EssentialsXサーバー上で/realnameコマンドへの応答を検索し、自動的にエイリアスを追加します。"
 	"text.chat_heads.config.error.title": "設定画面を開けません！",
 	"text.chat_heads.config.error.no_cloth_config": "Cloth Configがインストールされていません",
 	"text.chat_heads.config.error.cloth_config_curseforge_link": "CurseForgeでCloth Configのページを開く",
