--- a/common/src/main/resources/assets/chat_heads/lang/zh_tw.json
+++ b/common/src/main/resources/assets/chat_heads/lang/zh_tw.json
@@ -1,27 +1,29 @@
 {
   "modmenu.descriptionTranslation.chat_heads": "用直觀的方式查看誰在跟你聊天！\n這個模組在聊天訊息前增加了玩家頭貼。",
   "text.autoconfig.chat_heads.title": "聊天室頭貼",
-  "text.autoconfig.chat_heads.option.offsetNonPlayerText": "非玩家的聊天訊息偏移值",
+  "text.autoconfig.chat_heads.option.offsetNonPlayerText": "偏移非玩家的聊天訊息",
   "text.autoconfig.chat_heads.option.offsetNonPlayerText.@Tooltip": "啟用後所有文字將會對齊\n僅適用於「行前」繪製方式",
   "text.autoconfig.chat_heads.option.explanation": "「UUID」？「啟發式」？",
-  "text.autoconfig.chat_heads.option.explanation.@Tooltip": "普通情況下，伺服器將會告訴你誰傳送的訊息，\n例如：傳送者的 UUID。然而，有許多伺服器不會這麼做。\n它們甚至傳送虛假的 UUID。在這種情況下我們會\n需要使用「啟發式」偵測。亦即是我們依照訊息內容來推測。\n啟發式並不是完美的，所以它有可能會出現不相符的頭貼。",
+  "text.autoconfig.chat_heads.option.explanation.@Tooltip": "普通情況下，伺服器將會告訴你誰傳送的訊息，\n例如：傳送者的UUID。然而，有許多伺服器不會這麼做。\n它們甚至傳送虛假的UUID。在這種情況下我們會\n需要使用「啟發式」偵測。亦即是我們依照訊息內容來推測。\n啟發式並不是完美的，所以它有可能會出現不相符的頭貼。",
   "text.autoconfig.chat_heads.option.renderPosition": "繪製位置",
-  "text.autoconfig.chat_heads.option.renderPosition.@Tooltip": "聊天室頭貼繪製的位置",
-  "text.autoconfig.chat_heads.option.renderPosition.BEFORE_LINE": "行前",
-  "text.autoconfig.chat_heads.option.renderPosition.BEFORE_NAME": "名稱前",
+  "text.autoconfig.chat_heads.option.renderPosition.@Tooltip": "聊天室頭貼繪製的位置\n\n注意：「在玩家名前」可能會與部分模組衝突。\n對於Caxton模組和現代化UI，將自動預設使用「在聊天行前」。",
+  "text.autoconfig.chat_heads.option.renderPosition.BEFORE_LINE": "在聊天行前",
+  "text.autoconfig.chat_heads.option.renderPosition.BEFORE_NAME": "在玩家名前",
   "text.autoconfig.chat_heads.option.senderDetection": "傳送者偵測",
-  "text.autoconfig.chat_heads.option.senderDetection.@Tooltip": "對於大多數伺服器來說，「UUID 和啟發式」將會運作的很正常\n如果伺服器傳送虛假的 UUID，「僅啟發式」\n將是你適合使用的。",
-  "text.autoconfig.chat_heads.option.senderDetection.UUID_ONLY": "僅 UUID",
-  "text.autoconfig.chat_heads.option.senderDetection.UUID_AND_HEURISTIC": "UUID 和啟發式",
+  "text.autoconfig.chat_heads.option.senderDetection.@Tooltip": "「UUID和啟發式」在大多數伺服器上能夠正常運作。\n但如果伺服器傳送虛假的UUID，必須使用「僅啟發式」。",
+  "text.autoconfig.chat_heads.option.senderDetection.UUID_ONLY": "僅UUID",
+  "text.autoconfig.chat_heads.option.senderDetection.UUID_AND_HEURISTIC": "UUID和啟發式",
   "text.autoconfig.chat_heads.option.senderDetection.HEURISTIC_ONLY": "僅啟發式",
   "text.autoconfig.chat_heads.option.smartHeuristics": "智慧啟發式",
-  "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip": "如果已經知道伺服器是傳送 UUID，請關掉啟發式。\n（適用於「UUID 和啟發式」傳送者偵測）",
-  "text.autoconfig.chat_heads.option.handleSystemMessages": "處理系統訊息",
-  "text.autoconfig.chat_heads.option.handleSystemMessages.@Tooltip": "是否可以將頭貼套用在「純」伺服器訊息中。\n注意有很多伺服器將玩家訊息轉換成伺服器訊息！\n（例如正在執行 FreedomChat 插件的伺服器）\n僅在你知道自己在做什麼時關閉這項選項！",
+  "text.autoconfig.chat_heads.option.smartHeuristics.@Tooltip": "如果已經知道伺服器是傳送UUID，請關掉啟發式。\n（適用於「UUID和啟發式」傳送者偵測）",
+  "text.autoconfig.chat_heads.option.handleSystemMessages": "處理伺服器訊息",
+  "text.autoconfig.chat_heads.option.handleSystemMessages.@Tooltip": "是否可以將頭貼套用在「純」伺服器訊息中。\n注意：很多伺服器會將玩家訊息轉換成伺服器訊息，如使用FreedomChat插件的伺服器。\n僅在你知道自己在做什麼時關閉這項選項！",
   "text.autoconfig.chat_heads.option.nameAliases": "名稱別名",
-  "text.autoconfig.chat_heads.option.nameAliases.@Tooltip": "有些伺服器允許設定別名，這將無法自動的配對名稱。\n在這裡你可以手動指定配對別名來配對上他們的設定檔名，例如：\nnickname -> profilename\nnick1 nick2 nick3 -> profilename",
+  "text.autoconfig.chat_heads.option.nameAliases.@Tooltip": "有些伺服器允許設定別名，這將無法自動配對名稱。\n在這裡你可以手動指定配對別名來配對上他們的設定檔名。\n例如：nickname -> profilename",
+  "text.autoconfig.chat_heads.option.detectNameAliases": "自動偵測別名",
+  "text.autoconfig.chat_heads.option.detectNameAliases.@Tooltip": "此選項將尋找EssentialsX伺服器上對/realname指令的回應，並自動為其新增別名。"
   "text.chat_heads.config.error.title": "無法開啟設定選單",
   "text.chat_heads.config.error.no_cloth_config": "尚未安裝「Cloth Config」模組！",
-  "text.chat_heads.config.error.cloth_config_link": "在 CurseForge 上開啟 Cloth Config 頁面",
-  "text.chat_heads.config.error.cloth_config_modrinth_link": "在 Modrinth 上開啟 Cloth Config 頁面"
+  "text.chat_heads.config.error.cloth_config_link": "在 CurseForge上開啟Cloth Config頁面",
+  "text.chat_heads.config.error.cloth_config_modrinth_link": "在Modrinth上開啟Cloth Config頁面"
 }
