--- a/common/src/main/resources/assets/chat_heads/lang/ja_jp.json
+++ b/common/src/main/resources/assets/chat_heads/lang/ja_jp.json
@@ -21,7 +21,7 @@
 	"text.autoconfig.chat_heads.option.nameAliases": "ニックネーム",
 	"text.autoconfig.chat_heads.option.nameAliases.@Tooltip": "自動的に一致させられないニックネームを設定できるサーバーもあります。\n以下のように、手動でニックネームをプロフィール名に対応させられます：\nニックネーム -> プロフィール名",
 	"text.autoconfig.chat_heads.option.detectNameAliases": "エイリアスを自動検出する",
-	"text.autoconfig.chat_heads.option.detectNameAliases.@Tooltip": "このオプションは、EssentialsXサーバー上で/realnameコマンドへの応答を検索し、自動的にエイリアスを追加します。"
+	"text.autoconfig.chat_heads.option.detectNameAliases.@Tooltip": "このオプションは、EssentialsXサーバー上で/realnameコマンドへの応答を検索し、自動的にエイリアスを追加します。", 
 	"text.chat_heads.config.error.title": "設定画面を開けません！",
 	"text.chat_heads.config.error.no_cloth_config": "Cloth Configがインストールされていません",
 	"text.chat_heads.config.error.cloth_config_curseforge_link": "CurseForgeでCloth Configのページを開く",
