--- a/common/src/main/resources/assets/chat_heads/lang/en_us.json
+++ b/common/src/main/resources/assets/chat_heads/lang/en_us.json
@@ -8,6 +8,8 @@
   "text.autoconfig.chat_heads.option.renderPosition": "Render Position",
   "text.autoconfig.chat_heads.option.renderPosition.BEFORE_LINE": "Before Line",
   "text.autoconfig.chat_heads.option.renderPosition.BEFORE_NAME": "Before Name",
+  "text.autoconfig.chat_heads.option.threeDeeNess": "3Dness",
+  "text.autoconfig.chat_heads.option.threeDeeNess.@Tooltip": "Renders the hat layer slightly bigger\nto make chat heads appear less flat.\nThis can cause some rendering issues.\nOnly supported for \"Before Name\" rendering",
   "text.autoconfig.chat_heads.option.senderDetection": "Sender Detection",
   "text.autoconfig.chat_heads.option.senderDetection.@Tooltip": "For most servers \"UUID and heuristic\" works fine.\nIf the server sends fake UUIDs, \"Heuristic only\"\nhas to be used.",
   "text.autoconfig.chat_heads.option.senderDetection.UUID_ONLY": "UUID only",
